--- a/styles.css
+++ b/styles.css
@@ -35,19 +35,9 @@ input[type="checkbox"] {
 }
 
 .terms {
-    position: absolute;
-    margin-left: 10px;
-    width: 70%;
-    right: 0;
-    top: 0;
+    width: 75%;
+    float: right;
 }
-
-/* .terms > p {
-    position: absolute;
-    left: 20px;
-    width: 100%;
-} */
-
 
 
 #mobileNumber, #emailAddress {
@@ -65,19 +55,20 @@ h1 {
 }
 
 button {
-    height: 30px;
+    height: 40px;
     border: none;
     color: white;
     border-radius: 0.3rem;
-    width: 48%;
+    width: 46%;
     margin-top: 10px;
     margin-bottom: 10px;
+    font-size: 15pt;
 }
 
 .register-span {
     background-color: rgb(0, 174, 255);
     color: white;
-    padding: 5px;
+    padding: 2px;
     border-radius: 0.3rem;
 }
 
@@ -97,4 +88,26 @@ form {
 
 a {
     text-decoration: none;
+}
+
+@media screen and (max-width: 599px) {
+    .form-div {
+        width: 80%;
+        margin: 20px auto;
+        border: solid black 1pt;
+        padding: 5px 10px;
+    }
+
+    input[type="text"], input[type="password"] {
+        height: 30px;
+        margin-bottom: 20px;
+        padding-left: 5px;
+        border-radius: 0.3rem;
+        width: 100%;
+    }
+
+    .terms {
+        margin-top: 10px;
+        width: 100%;
+    }
 }
