--- a/David/CSS_Assignment/styles.css
+++ b/David/CSS_Assignment/styles.css
@@ -19,6 +19,10 @@ body {
   color: white;
 }
 
+h1 {
+  margin-bottom: 20px;
+}
+
 header {
   padding: 20px 0;
   background-color: #c6bfbf;
@@ -29,7 +33,7 @@ header {
   margin: auto;
 }
 
-.sections {
+.section-div {
   width: 50%;
   margin: auto;
   padding-top: 5px;
@@ -57,6 +61,9 @@ footer {
   clear: both;
   background-color: #0b4d14;
   padding: 20px 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-content {
