--- a/PersonalBlog/styles.css
+++ b/PersonalBlog/styles.css
@@ -20,10 +20,13 @@ body {
   background: linear-gradient(45deg, rgb(17, 17, 17), gray);
 }
 
-.top-div,
-footer {
+.top-div {
   background-color: #000;
   padding: 20px 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  min-height: 5vh;
 }
 
 .top-nav,
@@ -42,7 +45,7 @@ nav ul {
 
 nav ul li {
   float: left;
-  margin-right: 30px;
+  margin-left: 30px;
 }
 
 li a {
@@ -66,13 +69,14 @@ li a {
   font-family: "Pacifico", cursive;
   color: goldenrod;
   display: inline;
-  margin-right: 20px;
   font-size: 3rem;
   font-weight: lighter;
 }
 
 footer {
-  position: absolute;
+  position: fixed;
+  background-color: #000;
+  padding: 20px 0;
   bottom: 0;
   width: 100%;
 }
@@ -80,6 +84,7 @@ footer {
 main {
   width: 50%;
   margin: auto;
+  margin-top: 5vh;
   background-color: rgb(35, 32, 39);
   color: white;
   padding: 20px;
@@ -95,27 +100,39 @@ main {
   padding: 0 20px;
 }
 .blog-item {
-  background: linear-gradient(
-    50deg,
-    rgb(29, 27, 27),
-    gold,
-    gold,
-    rgb(29, 27, 27)
-  );
+  background: rgb(226, 147, 21);
   width: 48%;
-  height: 50px;
   border-radius: 0.7rem;
   margin-top: 10px;
   margin-bottom: 10px;
+  color: black;
+  padding: 10px;
 }
 
 .blog-item:hover {
-  background: linear-gradient(
-    50deg,
-    gold,
-    rgb(29, 27, 27),
-    rgb(29, 27, 27),
-    gold
-  );
+  background-color: gold;
   cursor: pointer;
+  position: relative;
+}
+
+.welcome {
+  margin: 10px;
+}
+
+.welcome-text {
+  margin: 10px;
+  margin-bottom: 50px;
+}
+
+.blog-date {
+  color: rgb(65, 56, 56);
+  margin-bottom: 20px;
+}
+
+.blog-title {
+  margin-top: 10px;
+}
+
+.blog-preview {
+  margin-bottom: 20px;
 }
