--- a/Patrick/album-finder/src/App.css
+++ b/Patrick/album-finder/src/App.css
@@ -65,3 +65,23 @@ h3 {
 	padding: 5px;
 	border-radius: 0.5rem;
 }
+
+@media screen and (max-width: 415px) {
+	.searchResults {
+		width: 100%;
+	}
+
+	.albumCard {
+		width: 25%;
+	}
+}
+
+@media screen and (min-width: 415px) and (max-width: 1024px) {
+	.searchResults {
+		width: 100%;
+	}
+
+	.albumCard {
+		width: 25%;
+	}
+}
