--- a/thirdexam/src/App.css
+++ b/thirdexam/src/App.css
@@ -14,27 +14,33 @@
 	padding: 0;
 }
 
+.newsHeader {
+	width: 70%;
+	margin: auto;
+	background-color: white;
+	text-align: center;
+	padding: 5px;
+}
+
 .newsBody {
 	width: 70%;
 	min-height: 100vh;
 	margin: auto;
 	background-color: white;
 	display: grid;
-	grid-template-columns: auto auto;
-	grid-template-rows: repeat(3, 1fr);
-}
+	grid-template-columns: 45% 45%;
+	grid-auto-rows: max-content;
+	justify-content: space-around;
 
-.newsHeader {
-	width: 70%;
-	margin: auto;
-	background-color: white;
-	text-align: center;
+	/* grid-template-rows: repeat(3, 1fr); */
 }
 
 .card {
-	padding: 10px;
-	margin: 10px;
 	border-radius: 1rem;
+	box-shadow: 3px 3px 0 1px white;
+	border: white 2px solid;
+	padding: 5px;
+	margin: 10px 0;
 }
 
 h2 {
@@ -46,7 +52,7 @@ p {
 	margin-bottom: 20px;
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 600px) {
 	.newsBody {
 		grid-template-columns: auto;
 	}
@@ -66,7 +72,7 @@ p {
 	}
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 600px) and (max-width: 768px) {
 	.newsBody {
 		grid-template-columns: auto auto;
 	}
@@ -77,7 +83,7 @@ p {
 	}
 
 	p {
-		font-size: small;
+		font-size: normal;
 	}
 
 	.newsBody,
